<resources>
    <string name="app_name">craft_blazek_558_finproj</string>
    <!-- Strings used for fragments for navigation -->
    <string name="connect_btn_label">Connect</string>
    <string name="disconnect_btn_label">Disconnect</string>

    <string name="liteon_btn_label">ON</string>
    <string name="liteoff_btn_label">OFF</string>

    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">temperature</string>
    <string name="humidity">humidity</string>
    <string name="lums">lums</string>
    <string name="soil">soil</string>
    <string name="waterLev">water level</string>
    <string name="fan">fan</string>
    <string name="pump">pump</string>
    <string name="lights_mat">lights and mat</string>
    <string name="sch_lights">Schedule Light</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">ECE558
        \nProfessor: Roy Kravitz \nStudents: \nJosh Blazek and David Craft
        \n\n... press Back to go back</string>
</resources>